--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .body{
-    background-image: url('/blog/img/mount1.png') ;
+    background-image: url('/blog/img/blogback.jpeg') ;
     background-repeat: no-repeat;
     height: 100%;
     font-family: raleway, sans-serif;
