--- a/css/blog.css
+++ b/css/blog.css
@@ -1,5 +1,5 @@
 .body{
-    background-image: url('/blog/img/shipback.png');
+    background-image: url('../img/shipback.png');
     font-family: raleway, sans-serif;
     
 }
