--- a/src/styles/bootstrap_variable_overwrite.scss
+++ b/src/styles/bootstrap_variable_overwrite.scss
@@ -23,3 +23,56 @@ h4{
 font-family: 'Montserrat', sans-serif;
 
 }
+
+h3{
+    color: White;
+}
+#pic{
+    font-family: 'Montserrat', sans-serif;
+    color:white;
+}
+// #cap{
+//     color: white;
+//     background: rgb(255,255,255);
+// background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(0,51,160,1) 100%);
+// }
+
+#cap {
+    
+    background-color: #34495e;
+    color: #ecf0f1;
+    
+}
+
+
+
+i{
+    size: 50px;
+    color: white;
+}
+
+#todocap{
+    background-color: #c1c4c2;
+}
+
+
+#khpcap{
+    background-color:#83817f;
+}
+#watercap{
+    background-color: #04a7e8;
+}
+#menucap{
+    background-color: #805270;
+}
+#hookscap{
+    background-color: #003a4d;
+}
+#herocap{
+    color: #fa2a1f;
+    background-color:#242e45;
+     font-family: 'Montserrat', sans-serif;
+
+}
+
+
