--- a/src/styles/bootstrap_variable_overwrite.scss
+++ b/src/styles/bootstrap_variable_overwrite.scss
@@ -1,9 +1,16 @@
 body{
     background-image: url(./img/blogback.jpeg);
+    // background-color: red;
     background-repeat: no-repeat;
     background-size: cover;
+}
+#me{
 
 }
+.name{
+    color: red;
+}
+
 nav{
 background-color:#797a7c; 
 
@@ -33,11 +40,6 @@ h3{
     font-family: 'Montserrat', sans-serif;
     color:white;
 }
-// #cap{
-//     color: white;
-//     background: rgb(255,255,255);
-// background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(0,51,160,1) 100%);
-// }
 
 #cap {
     
@@ -78,8 +80,75 @@ i{
      font-family: 'Montserrat', sans-serif;
 
 }
-// #git{
-//     background-color:;
-// }
+
+#me{
+    text-size-adjust: 300px;
+}
+#a {
+  color:white;
+}
+
+#smallCap{
+     color: white;
+    font-family: 'Montserrat', sans-serif;
+}
+
+#probot{
+     color: white;
+    font-family: 'Montserrat', sans-serif;
+}
+
+HTML CSSResult Skip Results Iframe
+EDIT ON
+
+body {
+  background-color: #111;
+}
+
+.title {
+  font-family: "Montserrat";
+  text-align: center;
+  color: #FFF;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: top;
+  height: 100vh;
+  letter-spacing: 5px;
+}
+
+h1 {
+  background-image: url(https://media.giphy.com/media/26BROrSHlmyzzHf3i/giphy.gif);
+  background-size: cover;
+  color: transparent;
+  -moz-background-clip: text;
+  -webkit-background-clip: text;
+  text-transform: uppercase;
+  font-size: 250px;
+  line-height: .75;
+  margin: 10px 0;
+}
+/* styling my button */
+
+.white-mode {
+  text-decoration: none;
+  padding: 7px 10px;
+  background-color: #122;
+  border-radius: 3px;
+  color: #FFF;
+  transition: .35s ease-in-out;
+  position: absolute;
+  left: 15px;
+  bottom: 15px;
+  font-family: "Montserrat";
+}
+
+.white-mode:hover {
+  background-color: #FFF;
+  color: #122;
+}
+#title{
+    font-size: xxx-large
+}
 
 
