--- a/src/styles/bootstrap_variable_overwrite.scss
+++ b/src/styles/bootstrap_variable_overwrite.scss
@@ -21,9 +21,18 @@ h1{
 font-family: 'Montserrat', sans-serif;
 }
 h2{
-    color: #2c2f2e;
-         font-family: 'Architects Daughter', cursive;
-font-family: 'Montserrat', sans-serif;
+//     color: #2c2f2e;
+//          font-family: 'Architects Daughter', cursive;
+// font-family: 'Montserrat', sans-serif;
+background-image: url(https://media.giphy.com/media/26BROrSHlmyzzHf3i/giphy.gif);
+  background-size: cover;
+  color: transparent;
+  -moz-background-clip: text;
+  -webkit-background-clip: text;
+  text-transform: uppercase;
+  font-size: 200px;
+  line-height: .75;
+  margin: 3px 0;
 
 }
 h4{
